# uv-workspace-debug

./: pyproject.toml
src/albatros/: __init__.py
