[project]
name = "albatros"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gergely Imreh", email = "gergely.imreh@faculty.ai" }
]
requires-python = ">=3.13"
dependencies = ["bird-feeder"]
dynamic = ["version"]

[project.scripts]
albatros = "albatros:main"

[tool.uv.sources]
bird-feeder = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
